# odoo-mcp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ai-review.yml  automerge.yml  ci.yml  codeql.yml  security-review.yml
config/: employee_mcp_config.json  oauth_config.example.json  odoo_config.example.json
docker/: Dockerfile.bridge  docker-compose.yml
docs/: CI_CD.md  CLAUDE_INTEGRATION.md  SECURITY.md
odoo_addons/mcp_apikey_provisioning/: README.md  __manifest__.py
odoo_addons/mcp_apikey_provisioning/models/: res_users.py
odoo_addons/mcp_apikey_provisioning/security/: mcp_security.xml
scripts/: ai_reviewer.py  reviewer_config.py  run_e2e_tests.sh  security_reviewer.py
scripts/security_context/: accepted_risks.md  repository_context.md  sensitive_patterns.py
src/odoo_mcp_bridge/: README.md  __init__.py  __main__.py  app.py  auth.py  clients.py  config.py  oauth_storage.py  provisioning.py  theme.py  tools_adapter.py  vault.py
src/odoo_mcp_server/: __init__.py  config.py  http_server.py  server.py
src/odoo_mcp_server/oauth/: resource_server.py  token_validator.py  user_mapping.py
src/odoo_mcp_server/odoo/: client.py
src/odoo_mcp_server/tools/: __init__.py  employee.py  sign.py
terraform/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/bridge/: test_config.py  test_oauth_storage.py  test_provisioning.py  test_tools_adapter.py  test_vault.py
tests/e2e/: scenarios.json  test_employee_scenarios.py  test_mcp_http_e2e.py
tests/integration/: test_live_odoo.py  test_staging_comprehensive.py
tests/mcp/: test_mcp_protocol.py
tests/unit/: test_config.py  test_google_oauth_scopes.py  test_http_server.py  test_oauth.py  test_oauth_resource_server.py  test_odoo_client.py  test_sign_tools.py  test_tools.py
